# hidemyemail-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: update-tap.yml
Formula/: hidemyemail.rb
src/hidemyemail/: __init__.py  cli.py  config.py
src/hidemyemail/auth/: __init__.py  keychain.py  touchid.py
src/hidemyemail/commands/: auth.py  emails.py
src/hidemyemail/core/: __init__.py  exceptions.py  hidemyemail.py  icloud_client.py
